<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="275dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lib" />

        <TextView
            android:id="@+id/authorNameImageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F9F0F0"
            android:text="@string/author_text"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/birthplaceImageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F9F0F0"
            android:text="@string/birthplace_text"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="@+id/imageView2" />

        <TextView
            android:id="@+id/authorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/author_text"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintWidth_percent="0.4" />

        <TextView
            android:id="@+id/birthplaceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/birthplace_text"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorEdit" />

        <EditText
            android:id="@+id/authorEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/authorText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/authorText"
            app:layout_constraintTop_toTopOf="@+id/authorText" />

        <EditText
            android:id="@+id/birthplaceEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            android:layout_weight="3"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthplaceText" />

        <TextView
            android:id="@+id/litDirectionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/author_direction_txt"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/birthplaceEdit"
            app:layout_constraintWidth_percent="0.3" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginEnd="@dimen/default_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/litDirectionText"
            app:layout_constraintTop_toTopOf="@+id/litDirectionText">

            <RadioButton
                android:id="@+id/author_direction_baroque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author_direction_baroque_txt" />

            <RadioButton
                android:id="@+id/author_direction_realism"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author_direction_realism_txt" />

            <RadioButton
                android:id="@+id/author_direction_sentimentalism"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/author_direction_sentimentalism_txt" />
        </RadioGroup>

        <TextView
            android:id="@+id/langText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/lang_flg_txt"
            android:textSize="@dimen/default_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
            app:layout_constraintWidth_percent="0.3" />

        <CheckBox
            android:id="@+id/ua_flg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_padding"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/ua_flg_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/langText"
            app:layout_constraintTop_toTopOf="@+id/langText" />

        <CheckBox
            android:id="@+id/ru_flg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/default_padding"
            android:text="@string/ru_flg_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ua_flg"
            app:layout_constraintTop_toBottomOf="@+id/ua_flg" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:layout_marginEnd="8dp"
            android:onClick="onOkBtnClick"
            android:text="@string/btn_ok_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ru_flg" />

        <Button
            android:id="@+id/btnBookList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/default_padding"
            android:onClick="onBtnBookListClick"
            android:text="@string/label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ru_flg" />

        <ImageButton
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onDelete"
            app:layout_constraintEnd_toStartOf="@+id/btnOk"
            app:layout_constraintStart_toEndOf="@+id/btnBookList"
            app:layout_constraintTop_toTopOf="@+id/btnBookList"
            app:srcCompat="@android:drawable/ic_menu_delete" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>